--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/metro-runtime": "~3.1.3",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/stack": "^6.3.29",
+    "@supabase/supabase-js": "^2.43.1",
     "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
